# mdstream

./: .clippy.toml  .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO  build.rs  callouts.md  test.md  test_theme
.github/workflows/: ci.yml  pages.yml  release.yml
src/: lib.rs  main.rs
tests/: conformance.rs  unit.rs
tests/common/: fixture_loader.rs  mod.rs
tests/fixtures/ansi/: backslash_escapes.toml  hyperlinks.toml  hyperlinks_with_title.toml  inline_formatting.toml
tests/fixtures/blocks/: blockquote_basic.toml  blockquote_dynamic_nesting.toml  blockquote_inline_formatting.toml  blockquote_lazy.toml  blockquote_nested.toml  callout_all_types.toml  callout_note.toml  code_block.toml  code_fence_in_list.toml  code_fence_indented.toml  heading.toml  heading_inline_formatting.toml  horizontal_rule_asterisks.toml  horizontal_rule_basic.toml  horizontal_rule_in_list.toml  horizontal_rule_spaces.toml  indented_code.toml  indented_code_blank_lines.toml  indented_code_extra_indent.toml  indented_code_tab.toml  indented_code_trailing_blank.toml  list.toml  list_mixed.toml  list_nested.toml  list_ordered.toml  paragraph.toml  table_alignment.toml  table_basic.toml  table_inline_formatting.toml
tests/fixtures/complex/: mixed_document.toml
tests/fixtures/streaming/: block_boundaries.toml  incremental_emit.toml  table_boundary.toml
tests/fixtures/wrapping/: blockquote_wrap.toml  list_wrap.toml  long_url.toml  paragraph_wrap.toml
tools/: build-site.sh  release.sh
transcripts/: 21-replace-release-with-goreleaser.html  23-homebrew-cask-support.html  26-add-callout-support.html  29-fix-unicode-table-alignment.html  33-backslash-escapes.html  34-html-entities.html  35-update-deps-optimize-binary.html  37-list-continuation-fix.html
