[package]
name = "mdriver"
version = "0.11.0"
edition = "2021"
description = "Streaming markdown printer for the terminal with syntax highlighting"
license = "MIT"
repository = "https://github.com/llimllib/mdriver"
readme = "README.md"
keywords = ["markdown", "terminal", "cli", "streaming", "syntax-highlighting"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Bill Mill <bill@billmill.org>"]
exclude = ["mdriver-*"]

[[bin]]
name = "mdriver"
path = "src/main.rs"

[dependencies]
two-face = "0.5.1"
syntect = "5.2"
ureq = "2.9"
image = "0.25"
base64 = "0.22"
term_size = "0.3"
resvg = "0.45"
unicode-width = "0.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
