[package]
name = "mdriver"
version = "0.12.0"
edition = "2021"
description = "Streaming markdown printer for the terminal with syntax highlighting"
license = "MIT"
repository = "https://github.com/llimllib/mdriver"
readme = "README.md"
keywords = ["markdown", "terminal", "cli", "streaming", "syntax-highlighting"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Bill Mill <bill@billmill.org>"]
exclude = ["mdriver-*"]

[[bin]]
name = "mdriver"
path = "src/main.rs"

[dependencies]
two-face = "0.5.1"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "parsing", "html", "dump-load", "dump-create"] }
ureq = "2.12"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22.1"
term_size = "0.3"
resvg = { version = "0.46", default-features = false, features = ["text", "system-fonts"] }
unicode-width = "0.2.2"
htmlentity = "1.3.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
